[package]
name = "ledger-filecoin"
description = "Library to integrate with the Ledger Filecoin app"
version = "0.11.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/ZondaX/ledger-filecoin-rs"
repository = "https://github.com/ZondaX/ledger-filecoin-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "filecoin"]
edition     = "2018"
autobenches = false

[lib]
name = "ledger_filecoin"

[dependencies]
ledger = "0.2.5"

thiserror = "1"

byteorder = "1.3.1"
k256 = { version = "0.10", features = ["ecdsa-core", "arithmetic", "std"], default-features = false }

[dev-dependencies]
hex = "0.4"
once_cell = "1"
blake2 = "0.9"
k256 = "0.10"
ecdsa = { version = "0.13", features = ["verify"] }

[profile.release]
overflow-checks = true
