[package]
name = "ledger-filecoin"
description = "Library to integrate with the Ledger Filecoin app"
version = "0.12.0"
license = "Apache-2.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
homepage = "https://github.com/ZondaX/ledger-filecoin-rs"
repository = "https://github.com/ZondaX/ledger-filecoin-rs"
readme = "README.md"
categories  = ["authentication", "cryptography"]
keywords = ["ledger", "nano", "apdu", "filecoin"]
edition     = "2018"
autobenches = false

[lib]
name = "ledger_filecoin"

[dependencies]
ledger-transport = "0.11.0"
ledger-zondax-generic = "0.11.2"

thiserror = "2.0.0"

byteorder = "1.4.3"
k256 = { version = "^0.13", features = ["ecdsa-core", "arithmetic", "std"], default-features = false }

[dev-dependencies]
hex = "0.4.3"
once_cell = "1.10.0"
blake2 = "0.10.4"
k256 = "^0.13"
ecdsa = { version = "0.16.9", features = ["verifying"] }

tokio = { version = "1", features = ["full"] }
ledger-transport-hid = "0.11.0"
serial_test = "3.1.1"

[profile.release]
overflow-checks = true
